--- a/css/styles.css
+++ b/css/styles.css
@@ -43,3 +43,15 @@ site-footer {
     border-top: none;
     padding: 10px;
 }
+
+.navbar-dark {
+    background-color: #901cad;
+}
+
+.carousel-caption {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.carousel {
+    border: solid #5637DD;
+}
