--- a/css/styles.css
+++ b/css/styles.css
@@ -53,5 +53,12 @@ site-footer {
 }
 
 .carousel {
-    border: solid #5637DD;
+    border: solid #5637dd;
+}
+
+#carouselButton {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
 }
