--- a/css/styles.css
+++ b/css/styles.css
@@ -49,3 +49,11 @@ site-footer {
   border: 1px solid #ddd;
   border-top: none;
   padding: 10px; }
+
+#reserveModal .modal-header {
+  background-color: #17a2b8;
+  color: white; }
+
+#loginModal .modal-header {
+  background-color: #901cad;
+  color: white; }
